Fixed action separator and overlay z-index

--- a/scss/components/dropdown/actions.scss
+++ b/scss/components/dropdown/actions.scss
@@ -13,7 +13,7 @@
       // 1.1.1. Menu
 
       > .ch-menu {
-        &:first-child:before {
+        &:not(:last-child):before {
           $empty: '';
 
           @include ch-border(top);
@@ -59,6 +59,7 @@
     > .ch-overlay {
       visibility: visible;
       position: relative;
+      z-index: initial;
 
       margin-top: 0;
       min-width: auto;
